feat: enhance password validation and translations for user registration
- Updated Arabic translations:
  - "deliver_to_front_door": "التوصيل إلى باب المنزل"
  - "come_with_no_sound": "لا تُحدث صوتًا عند الوصول"
  - Added new key: "please_enter_a_strong_password_meeting_all_requirements"

- Updated English translations:
  - "deliver_to_front_door": "Deliver to the house door"
  - Added matching key for strong password prompt

- Enhanced `AuthController`:
  - Added individual password rule checks (uppercase, lowercase, special char, number, length)
  - Added `validPassCheck` method to validate password rules
  - Added `showPassView` flag to control rule visibility

- Updated `SignUpScreen` and `SignUpWidget`:
  - Show password requirements dynamically as the user types
  - Validate all password rules before allowing sign-up
  - Reset password validation state on screen init

- Refactored `PassViewWidget`:
  - Now supports user registration view
  - Displays dynamic validation feedback

- Changed image source in `pickImageFromGallery` from gallery to camera

- Updated `validatePassword` logic to delegate all password checks to `AuthController`

- Minor UI/UX improvements for form layout, alignment, and code clarity

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -823,7 +823,8 @@
   "please_add_manually_or_collect_promo_from": "يرجى الإضافة يدويًا أو جمع العرض الترويجي من",
   "save_for_later": "حفظ لوقت لاحق",
   "schedule": "جدول",
-  "instance": "مثال",
+  "instance": "حالا",
+  "please_enter_a_strong_password_meeting_all_requirements": "يرجى إدخال كلمة مرور قوية تستوفي جميع الشروط المطلوبة",
   "add_more_delivery_instruction": "إضافة المزيد من تعليمات التسليم",
   "it_s_a_great_way_to_show_your_appreciation_for_their_hard_work": "إنها طريقة رائعة لإظهار تقديرك لعملهم الشاق",
   "schedule_time_tool_tip": "يمكنك الطلب على الفور أو يمكنك أيضًا الطلب عن طريق جدولة الوقت",
@@ -882,7 +883,7 @@
   "Please cancel the order": "يرجى إلغاء الطلب",
   "Call me ASAP": "اتصل بي في أسرع وقت ممكن",
   "Notify me when it’s back": "أعلمني عندما يعود",
-  "Deliver to front door": "تسليم إلى الباب الأمامي",
+  "Deliver to front door": "التوصيل إلى باب المنزل",
   "Deliver to the reception desk": "تسليم إلى مكتب الاستقبال",
   "Call me if I’m not available": "اتصل بي إذا لم أكن متاحا",
   "Avoid calling me": "تجنب الاتصال بي",
@@ -905,10 +906,10 @@
   "they_register": "يقومون بالتسجيل",
   "with_special_offer": "مع عرض خاص",
   "you_made_your_earning": "لقد حققت مكاسبك!",
-  "deliver_to_front_door": "تسليم إلى الباب الأمامي",
+  "deliver_to_front_door": "التوصيل إلى باب المنزل",
   "deliver_the_reception_desk": "تسليم إلى مكتب الاستقبال",
   "avoid_calling_phone": "تجنب الاتصال بالهاتف",
-  "come_with_no_sound": "تعال بدون صوت",
+  "come_with_no_sound": "لا تُحدث صوتًا عند الوصول",
   "you_have_earned": "لقد كسبت",
   "service_charge": "رسوم الخدمة",
   "add_fund": "أضف الصندوق",
@@ -1173,6 +1174,7 @@
   "this_field_is_required": "هذه الخانة مطلوبه",
   "minimum_password_is_8_character": "الحد الأدنى لكلمة المرور هو 8 أحرف",
   "confirm_password_field_is_required": "حقل تأكيد كلمة المرور مطلوب",
+  "password_must_include_uppercase": "يجب ان تحتوي كلمة المرور على حرف كبير",
   "write_store_name": "كتابة اسم المتجر",
   "store_name_field_is_required": "حقل اسم المتجر مطلوب",
   "store_logo": "شعار المتجر",
