--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -34,8 +34,10 @@
   "enter_password": "Enter your password",
   "confirm_password_does_not_matched": "Confirmed password doesn't matched",
   "password_should_be": "Password should be greater than 8 characters",
+  "password_must_include_uppercase": "Password must include uppercase",
   "otp_verification": "OTP Verification",
   "enter_the_verification_sent_to": "Enter the verification code (OTP) sent to",
+  "please_enter_a_strong_password_meeting_all_requirements": "Please enter a strong password that meets all the required conditions",
   "verify": "Verify",
   "did_not_receive_the_code": "Didn't receive the code?",
   "resend": "Resend",
@@ -905,7 +907,7 @@
   "they_register": "They register",
   "with_special_offer": "with special offer",
   "you_made_your_earning": "You made your earning !",
-  "deliver_to_front_door": "Deliver to front door",
+  "deliver_to_front_door": "Deliver to the house door",
   "deliver_the_reception_desk": "Deliver to the reception desk",
   "avoid_calling_phone": "Avoid Calling Phone",
   "come_with_no_sound": "Come with no sound",
