feat: update Arabic translations and reorder home screen widgets
- Changed Arabic translation for:
  - "apply": from "تطبيق" to "تأكيد"
  - "view": from "منظر" to "اعرض"

- Reordered UI widgets in multiple home screen modules:
  - Moved `HighlightWidget` to appear earlier in `FoodHomeScreen`, `GroceryHomeScreen`, `PharmacyHomeScreen`, and `ShopHomeScreen`
  - Adjusted widget positions for improved visual consistency across home categories

- Commented out legacy advertisement API fetch in `AdvertisementRepository` (may be unused or deprecated)

- Minor formatting cleanups:
  - Removed extra blank lines and aligned widget declarations in `ShopHomeScreen`

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -97,7 +97,7 @@
   "my_cart": "سلة التسوق الخاصة بي",
   "removed_from_cart": "تمت إزالتها من سلة التسوق",
   "enter_promo_code": "أدخل الرمز الترويجي",
-  "apply": "تطبيق",
+  "apply": "تأكيد",
   "delivery_option": "خيار التسليم",
   "home_delivery": "توصيل الطلبات للمنازل",
   "take_away": "استلام من الفرع",
@@ -808,7 +808,7 @@
   "are_you_sure": "هل أنت متأكد؟",
   "you_want_to_delete_this_location": "هل تريد حذف هذا الموقع؟",
   "and_up_to": "& يصل إلى",
-  "view": "منظر",
+  "view": "اعرض",
   "more_option": "أكثر",
   "add_more_items": "إضافة المزيد من العناصر",
   "you_may_also_like": "قد يعجبك أيضًا!",
