feat: added gradient enhancements and brand visuals for onboarding and UI
- Replaced login logo with full-width image in sign-in screen using `Images.loginLogo`.
- Replaced splash screen logo and added gradient background.
- Introduced new colors file `AppColor` with splashColorRight constant.
- Updated both dark and light themes with custom `splashColor`.
- Made `SliverAppBar` and persistent headers gradient-styled in home screen.
- Applied white color to text and icons in SliverAppBar for better contrast over gradient.
- Adjusted "item_that_you_love" and other strings in both Arabic and English for better UX.
- Customized bottom navigation colors using `bottomAppBarTheme.surfaceTintColor`.
- Reduced height of food category view and adjusted paddings.
- Removed background image from food module to match new branding style.
- Added constants: `paddingSizeExtraOverOverLarge` in `Dimensions`.
- Updated `Images.dart` to register `splash_logo.png` and `login.png`.

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -1069,7 +1069,7 @@
   "most_popular_items": "العناصر الأكثر شعبية",
   "কাছা": "منك",
   "open_now": "افتح الآن",
-  "item_that_you_love": "العنصر الذي ستحبه",
+  "item_that_you_love": "خصيصاً لك",
   "best_store_nearby": "أفضل مكاتب التمريض القريبة",
   "start_from": "ابدأ من",
   "just_for_you": "فقط لأجلك",
@@ -1243,8 +1243,8 @@
   "max_product": "منتج ماكس",
   "your_registration_not_setup_yet": "التسجيل الخاص بك لم يتم الإعداد بعد",
   "whats_new_on": "ما الجديد في",
-  "highlights_for_you": "أبرز لك",
-  "see_our_most_popular_store_and_item": "شاهد متجرنا وعناصرنا الأكثر شعبية",
+  "highlights_for_you": "اختيارات مميزة لك",
+  "see_our_most_popular_store_and_item": "اطلع علي مكاتبنا والعناصر المميزه لدينا",
   "create_account_with_existing_info": "إنشاء حساب بالمعلومات الموجودة",
   "enter_confirm_password": "أدخل تأكيد كلمة المرور",
   "you_want_to_disable_notification": "تريد تعطيل الإخطار",
