--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -1070,7 +1070,7 @@
   "most_popular_items": "Most Popular Items",
   "কাছা": "From You",
   "open_now": "Open Now",
-  "item_that_you_love": "Item that You’ll Love",
+  "item_that_you_love": "For You",
   "best_store_nearby": "Best Stores Nearby",
   "start_from": "Start From",
   "just_for_you": "Just for You",
