refactor: update cart terminology and replace SVG with PNG icon
- Replaced `order_confirm_icon.svg` with new `order_confirm_icon.png`
- Added `refer_earn_icon.jpg` image
- Updated Arabic translations to replace "سلة التسوق" with "سلة الطلبات"
- Updated related cart-related messages accordingly
- Changed some store/restaurant references to "مكتب" to align with domain usage
- Fixed minor translation inconsistencies in Arabic and English locale files

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -54,7 +54,7 @@
   "categories": "فئات",
   "popular_items_nearby": "العناصر الشعبية القريبة",
   "restaurants": "مكاتب التمريض",
-  "stores": "متاجر",
+  "stores": "مكاتب",
   "all_restaurants": "جميع مكاتب التمريض",
   "all_stores": "جميع مكاتب التمريض",
   "please_enter_mobile": "يرجى إدخال رقم هاتفك المحمول المسجل حتى نتمكن من مساعدتك في استعادة كلمة المرور الخاصة بك.",
@@ -90,12 +90,12 @@
   "quantity": "كمية",
   "addons": "إضافات",
   "total_amount": "المبلغ الإجمالي",
-  "add_to_cart": "أضف إلى السلة",
-  "item_added_to_cart": "تمت إضافة العنصر إلى سلة التسوق",
-  "already_added_in_cart": "تمت إضافتها بالفعل في سلة التسوق",
+  "add_to_cart": "أضف إلى سلة الطلبات",
+  "item_added_to_cart": "تمت إضافة العنصر إلى سلة الطلبات",
+  "already_added_in_cart": "تمت إضافتها بالفعل في سلة الطلبات",
   "out_of_stock": "إنتهى من المخزن",
-  "my_cart": "سلة التسوق الخاصة بي",
-  "removed_from_cart": "تمت إزالتها من سلة التسوق",
+  "my_cart": "سلة الطلبات الخاصة بي",
+  "removed_from_cart": "تمت إزالتها من سلة الطلبات",
   "enter_promo_code": "أدخل الرمز الترويجي",
   "apply": "تأكيد",
   "delivery_option": "خيار التسليم",
@@ -140,7 +140,7 @@
   "view_all": "عرض الكل",
   "oops": "أُووبس!",
   "sorry": "آسف!",
-  "cart_is_empty": "سلة التسوق الخاصة بك فارغة",
+  "cart_is_empty": "سلة الطلبات الخاصة بك فارغة",
   "no_data_found": "لم يتم العثور على بيانات",
   "you_are_not_logged_in": "لم تقم بتسجيل الدخول",
   "login_to_continue": "تسجيل الدخول للمتابعة",
@@ -165,10 +165,10 @@
   "save_location": "حفظ الموقع",
   "pick_address": "اختر العنوان",
   "are_you_sure_to_reset": "هل أنت متأكد أنك تريد إعادة التعيين؟",
-  "if_you_change_location": "لديك بعض العناصر في سلة التسوق الخاصة بك. إذا قمت بتغيير موقعك، فسيتم إعادة تعيين سلة التسوق الخاصة بك والبيانات الأخرى المتعلقة بموقع التسليم الحالي الخاص بك.",
-  "if_you_change_category": "لديك بعض العناصر في سلة التسوق الخاصة بك. إذا قمت بتغيير الوحدة الخاصة بك، فسيتم إعادة تعيين سلة التسوق الخاصة بك والبيانات الأخرى المتعلقة بالوحدة الحالية الخاصة بك.",
-  "if_you_continue": "لديك عنصر من مكتب التمريض آخر في سلة التسوق. إذا تابعت، ستتم إزالة كل العناصر السابقة من سلة التسوق.",
-  "if_you_continue_without_another_store": "إذا كنت تريد تغيير نوع المتجر، فسيتم إعادة تعيين سلة التسوق الخاصة بك وبيانات ذاكرة التخزين المؤقت الأخرى ذات الصلة.",
+  "if_you_change_location": "لديك بعض العناصر في سلة الطلبات الخاصة بك. إذا قمت بتغيير موقعك، فسيتم إعادة تعيين سلة الطلبات الخاصة بك والبيانات الأخرى المتعلقة بموقع التسليم الحالي الخاص بك.",
+  "if_you_change_category": "لديك بعض العناصر في سلة الطلبات الخاصة بك. إذا قمت بتغيير الوحدة الخاصة بك، فسيتم إعادة تعيين سلة الطلبات الخاصة بك والبيانات الأخرى المتعلقة بالوحدة الحالية الخاصة بك.",
+  "if_you_continue": "لديك عنصر من مكتب التمريض آخر في سلة الطلبات. إذا تابعت، ستتم إزالة كل العناصر السابقة من سلة الطلبات.",
+  "if_you_continue_without_another_store": "إذا كنت تريد تغيير نوع المتجر، فسيتم إعادة تعيين سلة الطلبات الخاصة بك وبيانات ذاكرة التخزين المؤقت الأخرى ذات الصلة.",
   "yes_and_continue": "نعم واستمر",
   "total_order": "إجمالي الطلب",
   "dark_theme": "موضوع الظلام",
@@ -193,7 +193,7 @@
   "delivery_man": "موظف",
   "order_placed": "تم تقديم الطلب",
   "order_confirmed": "تم تأكيد الطلب",
-  "preparing_item": "يتم التحضير",
+  "preparing_item": "يتم الاعداد",
   "delivery_on_the_way": "التسليم في الطريق",
   "view_on_map": "عرض على الخريطة",
   "back_to_home": "العودة إلى الرئيسيه",
@@ -213,11 +213,11 @@
   "cash_on_delivery": "الدفع عند الاستلام",
   "faster_and_safe_way": "طريقة أسرع وأكثر أمانا لإرسال الأموال",
   "pay_your_payment_after_getting_item": "ادفع دفعتك بعد الحصول على المنتج",
-  "update_in_cart": "التحديث في سلة التسوق",
+  "update_in_cart": "التحديث في سلة الطلبات",
   "not_available_now_break": "غير متوفر\nالآن",
   "not_available_now": "غير متوفر الآن",
   "available_will_be": "سيكون متاحا",
-  "one_or_more_product_unavailable": "لا يتوفر منتج واحد أو أكثر في سلة التسوق الخاصة بك في الوقت الحالي",
+  "one_or_more_product_unavailable": "لا يتوفر منتج واحد أو أكثر في سلة الطلبات الخاصة بك في الوقت الحالي",
   "enter_a_coupon_code": "أدخل رمز القسيمة",
   "invalid_code_or": "رمز غير صالح أو فشل في الحصول على الخصم",
   "choose_payment_method": "اختر طريقة الدفع",
@@ -309,8 +309,8 @@
   "no_wish_data_found": "لم يتم العثور على البيانات المفضلة",
   "no_campaign_found": "لم يتم العثور على أي حملة",
   "no_item_available": "لا يوجد عنصر متاح",
-  "no_restaurant_available": "لا يوجد مطعم متاح",
-  "no_store_available": "لا يوجد متجر متاح",
+  "no_restaurant_available": "لا يوجد مكتب متاح",
+  "no_store_available": "لا يوجد مكتب متاح",
   "no_notification_found": "لم يتم العثور على أي إشعار",
   "no_order_found": "لم يتم العثور على أي أمر",
   "update_now": "التحديث الآن",
@@ -653,7 +653,7 @@
   "you_cant_order_more_then": "لا يمكنك طلب المزيد بعد ذلك",
   "in_cash_on_delivery": "نقدا عند التسليم",
   "tax_included": "(شامل الضريبة)",
-  "in_stock": "موجود بالمخزنراق المالية",
+  "in_stock": "متوفر في المخزن",
   "i_have_read_and_agreed_with": "لقد قرأت ووافقت على",
   "please_accept_privacy_policy_trams_conditions_refund_policy_first": "يرجى قبول سياسة الخصوصية والترام والشروط وسياسة استرداد الأموال",
   "add_voucher": "أضف قسيمة",
@@ -1068,7 +1068,7 @@
   "sec": "ثانية",
   "most_popular_items": "العناصر الأكثر شعبية",
   "কাছা": "منك",
-  "open_now": "افتح الآن",
+  "open_now": "مفتوح الآن",
   "item_that_you_love": "خصيصاً لك",
   "best_store_nearby": "أفضل مكاتب التمريض القريبة",
   "start_from": "ابدأ من",
@@ -1077,7 +1077,7 @@
   "become_a_store_owner": "كن صاحب متجر",
   "send_us_mail": "أرسل لنا البريد",
   "find_us_here": "تجدنا هنا",
-  "basic_medicine_nearby": "الطب الأساسي قريب",
+  "basic_medicine_nearby": "العلاج الأساسي متوفر بالقرب منك",
   "New": "جديد",
   "fever": "حمى",
   "baby_care": "رعاية الطفل",
@@ -1252,7 +1252,7 @@
   "convertible_points": "النقاط القابلة للتحويل",
   "referral_code": "رمز الإحالة",
   "download_app_from_this_link": "تحميل التطبيق من هذا الرابط",
-  "confirm_delivery_details": "تأكيد تفاصيل التسليم",
+  "confirm_delivery_details": "تأكيد تفاصيل الطلب",
   "choose_your_language": "اختر لغتك",
   "choose_your_language_to_proceed": "اختر لغتك للمتابعة",
   "language_updated_successfully": "تم تحديث اللغة بنجاح",
@@ -1351,7 +1351,7 @@
   "add_more_vehicle": "إضافة المزيد من المركبات +",
   "trip_vehicle_list": "قائمة مركبات الرحلة",
   "remove_and_continue": "إزالة ومتابعة",
-  "cart": "سلة التسوق",
+  "cart": "سلة الطلبات",
   "same_vehicle": "نفس المركبة",
   "quantity_available": "الكمية المتوفرة",
   "coupons": "كوبونات",
@@ -1371,7 +1371,7 @@
   "confirm_booking": "تأكيد الحجز",
   "wishlist": "المفضلة",
   "please_select_pickup_time": "يرجى اختيار وقت الاستلام",
-  "another_vendors_car_exist_in_your_cart": "هناك سيارة بائع آخر في سلة التسوق الخاصة بك",
+  "another_vendors_car_exist_in_your_cart": "هناك سيارة بائع آخر في سلة الطلبات الخاصة بك",
   "pick_time": "اختر الوقت",
   "need_minimum_purchase_is": "الحد الأدنى المطلوب للشراء هو",
   "based_on": "استناداً إلى",
@@ -1449,7 +1449,7 @@
   "your_trip_distance_is": "مسافة رحلتك هي",
   "your_trip_duration_is": "مدة رحلتك هي",
   "trips": "الرحلات",
-  "your_cart_is_empty": "سلة التسوق الخاصة بك فارغة",
+  "your_cart_is_empty": "سلة الطلبات الخاصة بك فارغة",
   "please_enter_valid_estimate_time": "يرجى إدخال وقت تقديري صالح",
   "payment_failed": "فشل الدفع",
   "vendor_registration": "تسجيل مقدم الخدمه",
@@ -1499,7 +1499,7 @@
   "based_to": "استنادًا إلى",
   "do_you_want_to_change_trip_duration": "هل تريد تغيير مدة الرحلة؟",
   "are_you_sure_you_want_to_update_trip_duration_to": "هل أنت متأكد أنك تريد تحديث مدة الرحلة إلى",
-  "your_cart_has_been_cleared_as_the_selected_zone_does_not_support_the_previous_pickup_point": "تم مسح سلة التسوق الخاصة بك لأن المنطقة المحددة لا تدعم نقطة الاستلام السابقة.",
+  "your_cart_has_been_cleared_as_the_selected_zone_does_not_support_the_previous_pickup_point": "تم مسح سلة الطلبات الخاصة بك لأن المنطقة المحددة لا تدعم نقطة الاستلام السابقة.",
   "you_cant_add_more_than": "لا يمكنك إضافة أكثر من",
   "quantities_of_this_vehicle": "كميات هذه المركبة",
   "additional_discount": "خصم إضافي",
