--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -312,7 +312,7 @@
   "no_campaign_found": "No campaign found",
   "no_item_available": "No item available",
   "no_restaurant_available": "No Nurse Office available",
-  "no_store_available": "No store available",
+  "no_store_available": "No Office available",
   "no_notification_found": "No notification found",
   "no_order_found": "No order found",
   "update_now": "Update Now",
@@ -1252,7 +1252,7 @@
   "convertible_points": "Convertible Points",
   "referral_code": "Referral Code",
   "download_app_from_this_link": "Download app from this link",
-  "confirm_delivery_details": "Confirm Delivery Details",
+  "confirm_delivery_details": "Confirm Order Details",
   "choose_your_language": "Choose Your Language",
   "choose_your_language_to_proceed": "Choose your language to proceed",
   "language_updated_successfully": "Language updated successfully",
