feat: translation improvements and UI enhancements
- Updated "order_id" translation to "رقم الطلب" for accuracy.
- Refined "no_wish_data_found" translation to "لم يتم العثور" for clarity.
- Replaced "schedule" translation with "تطبيق" to match usage context.
- Updated MenuScreen with gradient background using AppColor.
- Set text direction to LTR for account creation date in the menu.
- Adjusted verification code visibility to show only on 'picked_up' or 'delivered' orders.
- Replaced order type label with "payment_method" in order details.
- Removed item count / payer info row from order details for cleaner UI.
- Switched `ongoingAnimation` asset from `.gif` to `.png` for performance.

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -112,7 +112,7 @@
   "favorite": "المفضله",
   "my_orders": "طلباتي",
   "running": "قيد التنفيذ",
-  "order_id": "معرف الطلب",
+  "order_id": "رقم الطلب",
   "details": "تفاصيل",
   "track_order": "تتبع الطلب",
   "re_order": "إعادة الطلب",
@@ -306,7 +306,7 @@
   "no_category_item_found": "لم يتم العثور على أي عنصر فئة",
   "no_category_found": "لم يتم العثور على فئة",
   "no_coupon_found": "لم يتم العثور على قسيمة",
-  "no_wish_data_found": "لم يتم العثور على البيانات المفضلة",
+  "no_wish_data_found": "لم يتم العثور",
   "no_campaign_found": "لم يتم العثور على أي حملة",
   "no_item_available": "لا يوجد عنصر متاح",
   "no_restaurant_available": "لا يوجد مكتب متاح",
@@ -822,7 +822,7 @@
   "no_promo_available": "لا يوجد عرض ترويجي متاح",
   "please_add_manually_or_collect_promo_from": "يرجى الإضافة يدويًا أو جمع العرض الترويجي من",
   "save_for_later": "حفظ لوقت لاحق",
-  "schedule": "جدول",
+  "schedule": "تطبيق",
   "instance": "حالا",
   "please_enter_a_strong_password_meeting_all_requirements": "يرجى إدخال كلمة مرور قوية تستوفي جميع الشروط المطلوبة",
   "add_more_delivery_instruction": "إضافة المزيد من تعليمات التسليم",
@@ -1117,7 +1117,7 @@
   "offline_payment_note_line_one": "للدفع دون اتصال بالإنترنت، يتعين عليك دفع الفاتورة من أحد الخيارات أدناه",
   "offline_payment_note_line_two": "احفظ المعلومات الضرورية اللازمة لتحديد الدفع أو تأكيده",
   "offline_payment_note_line_three": "أدخل المعلومات وتابع",
-  "please_enter_order_id": "الرجاء إدخال معرف الطلب",
+  "please_enter_order_id": "الرجاء إدخال رقم الطلب",
   "currently_no_recommended_store_available": "حاليا لا يوجد متجر موصى به متاح",
   "currently_no_recommended_restaurant_available": "حاليا لا يوجد مكتب تمريض موصى به متاح",
   "min_order_of": "الحد الأدنى للطلب",
@@ -1226,7 +1226,7 @@
   "store_information": "معلومات المتجر",
   "back": "خلف",
   "choose_subscription_package": "اختر باقة الاشتراك",
-  "write_order_id": "كتابة معرف الطلب",
+  "write_order_id": "كتابة رقم الطلب",
   "self_delivery": "التسليم الذاتي",
   "mobile_app": "تطبيق الجوال",
   "pos": "نقاط البيع",
