feat: fix highlight background layout and improve Arabic translations
- Replaced background image widget in HighlightWidget with Positioned.fill to ensure full coverage when screen size changes (e.g. rotation)
- Updated Arabic translations:
  - Changed "handover" from "التسليم" to "عملية التسليم"
  - Changed "restaurant_details" from "تفاصيل مكتب التمريض" to "تفاصيل مقدم الخدمة"

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -248,7 +248,7 @@
   "accepted": "مقبول",
   "processing": "قيد المعالجة",
   "confirmed": "مؤكد",
-  "handover": "التسليم",
+  "handover": "عملية التسليم",
   "picked_up": "تم الاستلام",
   "delivered": "تم التوصيل",
   "refund_requested": "طلب استرداد الأموال",
@@ -293,7 +293,7 @@
   "no_suggestions_available": "لا توجد اقتراحات متاحة",
   "delivery_verification_code": "رمز التحقق من التسليم",
   "variations": "الاختيارات المتاحة",
-  "restaurant_details": "تفاصيل مكتب التمريض",
+  "restaurant_details": "تفاصيل مقدم الخدمة",
   "store_details": "تفاصيل المتجر",
   "direction": "اتجاه",
   "restaurant_is_closed_now": "مكتب التمريض مغلق الآن",
