feat: update image picker source and improve localization for service provider flow
- Replaced all image pickers from gallery to camera for profile and auth controllers
- Increased image size validation limit from 1MB to 10MB in `pickImageFromCamera`
- Updated multiple Arabic and English translations to refer to "service provider" instead of "store" or "restaurant"
- Removed `onboard_3.png` and updated other onboarding and cart images
- Adjusted map marker logic to consistently use service provider icon instead of restaurant/store distinction

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -294,7 +294,7 @@
   "delivery_verification_code": "رمز التحقق من التسليم",
   "variations": "الاختيارات المتاحة",
   "restaurant_details": "تفاصيل مقدم الخدمة",
-  "store_details": "تفاصيل المتجر",
+  "store_details": "تفاصيل مقدم الخدمة",
   "direction": "اتجاه",
   "restaurant_is_closed_now": "مكتب التمريض مغلق الآن",
   "store_is_closed_now": "المتجر مغلق الآن",
