--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -295,8 +295,8 @@
   "no_suggestions_available": "No suggestions available",
   "delivery_verification_code": "Delivery Verification Code",
   "variations": "Variations",
-  "restaurant_details": "Nursse Office Details",
-  "store_details": "Store Details",
+  "restaurant_details": "Nurse Office Details",
+  "store_details": "Service partner details",
   "direction": "Direction",
   "restaurant_is_closed_now": "Nurse Office is closed now",
   "store_is_closed_now": "Store is closed now",
@@ -894,7 +894,7 @@
   "select_module_type": "Select Module Type",
   "please_select_module_first": "Please select module first",
   "please_select_zone": "Please select Zone",
-  "delivery_details": "Delivery Details",
+  "delivery_details": "Partner Details",
   "delivery_man_details": "Nurse Details",
   "from_store": "From Store",
   "cash": "Cash",
