Update onboarding assets and translations
- Replaced onboard_1.png and onboard_2.png images
- Added new image: onboard_3.png
- Removed outdated: ongoing_animation.gif
- Updated Arabic and English onboarding text:
  - Changed title and description for step 3

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -8,10 +8,10 @@
   "select_a_language": "اختر لغة",
   "on_boarding_1_title": "احصل على العناصر المفضلة",
   "on_boarding_2_title": "سهولة الدفع",
-  "on_boarding_3_title": "تسليم سريع",
+  "on_boarding_3_title": "وصول سريع",
   "on_boarding_1_description": "حدد موقعك لرؤية مكاتب التمريض واسعة النطاق واطلب العنصر الذي تريده.",
   "on_boarding_2_description": "اطلب العنصر باستخدام الدفع عند الاستلام أو الدفع عن طريق بوابة دفع أكثر أمانًا وأسرع.",
-  "on_boarding_3_description": "المئات من الموظفين ينتظرون طلبك. لذا قم بتقديم طلبك واحصل على المنتج الذي يتم توصيله إلى باب منزلك!",
+  "on_boarding_3_description": "المئات من الموظفين ينتظرون طلبك.!",
   "skip": "تخطي",
   "next": "التالي",
   "get_started": "ابدأ",
