--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -11,7 +11,7 @@
   "on_boarding_3_title": "Fast Delivery",
   "on_boarding_1_description": "Select your location to see the wide range stores and order your desired item.",
   "on_boarding_2_description": "Order item with COD payment or pay by safer and faster payment gateway.",
-  "on_boarding_3_description": "Hundreds of Nurses are waiting for your order. So place your order and get the item delivered to your doorstep!",
+  "on_boarding_3_description": "Hundreds of Nurses are waiting for your order.",
   "skip": "Skip",
   "next": "Next",
   "get_started": "Get Started",
