feat: تحديث الصور والنصوص وتحسين تصميم الواجهات
- استبدال صور onBoarding من صيغة PNG إلى JPG مع تحديث المسارات في ملف Images
- تعديل نصوص onBoarding في اللغتين العربية والإنجليزية لتناسب خدمات الرعاية المنزلية
- تغيير نصوص رسالة السلة الفارغة والعناوين المحفوظة في ملفات الترجمة
- إضافة تدرج لوني (Gradient) في شريط العنوان AppBar مع تعديل ألوان النصوص والأيقونات إلى الأبيض
- تعديل شاشة تسجيل الدخول بإضافة خلفية Gradient خلف اللوجو وتغيير المسافات
- تحسين عرض عنوان الموقع والإشعارات في HomeScreen بألوان أوضح
- تعديل شاشة الدعم SupportScreen لزيادة حجم وعرض صورة الدعم
- تحديث صورة support_image إلى صيغة JPG

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -6,11 +6,11 @@
   "select_language": "اختر اللغة",
   "save": "حفظ",
   "select_a_language": "اختر لغة",
-  "on_boarding_1_title": "احصل على العناصر المفضلة",
-  "on_boarding_2_title": "سهولة الدفع",
+  "on_boarding_1_title": "احصل على رعايتك الكامله",
+  "on_boarding_2_title": "راحتك في بيتك ورعايتك مسؤوليتنا",
   "on_boarding_3_title": "وصول سريع",
-  "on_boarding_1_description": "حدد موقعك لرؤية مكاتب التمريض واسعة النطاق واطلب العنصر الذي تريده.",
-  "on_boarding_2_description": "اطلب العنصر باستخدام الدفع عند الاستلام أو الدفع عن طريق بوابة دفع أكثر أمانًا وأسرع.",
+  "on_boarding_1_description": "حدد موقعك لرؤية مكاتب التمريض واسعة النطاق واطلب الخدمه التي تريدها.",
+  "on_boarding_2_description": "اطلب خدمتنا بكل سهوله وسرعه وهنقدملك الرعاية بكل حب وثقه",
   "on_boarding_3_description": "المئات من الموظفين ينتظرون طلبك.!",
   "skip": "تخطي",
   "next": "التالي",
@@ -140,7 +140,7 @@
   "view_all": "عرض الكل",
   "oops": "أُووبس!",
   "sorry": "آسف!",
-  "cart_is_empty": "سلة الطلبات الخاصة بك فارغة",
+  "cart_is_empty": "لسة مطلبتش حاجه؟..اطلب رعايتنا دلوقتي",
   "no_data_found": "لم يتم العثور على بيانات",
   "you_are_not_logged_in": "لم تقم بتسجيل الدخول",
   "login_to_continue": "تسجيل الدخول للمتابعة",
@@ -151,7 +151,7 @@
   "off_on_all_categories": "إيقاف على جميع الفئات",
   "set_location": "تعيين الموقع",
   "search_address_here": "عنوان البحث هنا",
-  "my_address": "عنواني",
+  "my_address": "العناوين المحفوظه",
   "saved_address": "العنوان المحفوظ",
   "add_new_address": "إضافة عنوان جديد",
   "home": "الرئيسيه",
