--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -6,11 +6,11 @@
   "select_language": "Select Language",
   "save": "Save",
   "select_a_language": "Select a language",
-  "on_boarding_1_title": "Get Favorite Items",
-  "on_boarding_2_title": "Easy Payment",
+  "on_boarding_1_title": "Get your full care",
+  "on_boarding_2_title": "Your comfort at home, and your care is our responsibility",
   "on_boarding_3_title": "Fast Delivery",
-  "on_boarding_1_description": "Select your location to see the wide range stores and order your desired item.",
-  "on_boarding_2_description": "Order item with COD payment or pay by safer and faster payment gateway.",
+  "on_boarding_1_description": "Set your location to see a wide range of nursing offices and request the service you want.",
+  "on_boarding_2_description": "Request our service easily and quickly, and we will provide you with care with love and trust.",
   "on_boarding_3_description": "Hundreds of Nurses are waiting for your order.",
   "skip": "Skip",
   "next": "Next",
@@ -153,7 +153,7 @@
   "off_on_all_categories": "off on all categories",
   "set_location": "Set Location",
   "search_address_here": "Search address here",
-  "my_address": "My Address",
+  "my_address": "Saved addresses",
   "saved_address": "Saved Address",
   "add_new_address": "Add New Address",
   "home": "Home",
@@ -1449,7 +1449,7 @@
   "your_trip_distance_is": "Your trip distance is",
   "your_trip_duration_is": "Your trip duration is",
   "trips": "Trips",
-  "your_cart_is_empty": "Your Cart is Empty",
+  "your_cart_is_empty": "Haven’t ordered anything yet?.. Order our care now",
   "please_enter_valid_estimate_time": "Please enter valid estimate time",
   "payment_failed": "Payment Failed",
   "vendor_registration": "Vendor Registration",
