change in language

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -22,6 +22,7 @@
   "confirm_password": "تأكيد كلمة المرور",
   "remember_me": "تذكرنى",
   "forgot_password": "هل نسيت كلمة السر",
+  "forget_password":"هل نسيت كلمه السر؟",
   "first_name": "الاسم الأول",
   "last_name": "اسم العائلة",
   "phone": "هاتف",
@@ -1101,7 +1102,7 @@
   "electronics": "إلكترونيات",
   "on_all_products": "على جميع المنتجات",
   "after_minimum_purchase": "بعد الحد الأدنى للشراء",
-  "wanna_try_again": "هل تريد المحاولة مرة أخرى",
+  "wanna_try_again": "اطلب مرة اخري",
   "no_product_available": "لا يوجد منتج متاح",
   "sold": "مُباع",
   "contact_information": "معلومات الاتصال",
