--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -22,6 +22,7 @@
   "confirm_password": "Confirm password",
   "remember_me": "Remember me",
   "forgot_password": "Forgot Password",
+  "forget_password": "Forget Password?",
   "first_name": "First name",
   "last_name": "Last name",
   "phone": "Phone",
@@ -1102,7 +1103,7 @@
   "electronics": "Electronics",
   "on_all_products": "on All Products",
   "after_minimum_purchase": "after Minimum Purchase",
-  "wanna_try_again": "Wanna Try Again",
+  "wanna_try_again": "Want another time",
   "no_product_available": "No Product Available",
   "sold": "Sold",
   "contact_information": "Contact Information",
