feat(ui,i18n): gradients, light status bar, centered cards, and Arabic strings fixes
- i18n (ar.json)
  - Update keys: `rate_and_review`, `rate_review`, `most_popular_items`
  - Replace “الإخطار” with “الاشعار” in enable/disable notification strings

- Auth (ManualLoginWidget)
  - Use `forget_password.tr` and remove trailing “?” in two places

- ItemCard
  - Center-align content for non-popular items
  - Center rating rows for consistent layout

- VisitAgainCard
  - Center card and increase bottom margin
  - Move storefront icon and rating to top overlay (Positioned)
  - Add bottom spacing under items strip

- CustomAppBar
  - Add `systemOverlayStyle` (transparent status bar, light icons)
  - Set cart icon color to white

- HomeScreen
  - Add `SystemUiOverlayStyle` to `SliverAppBar` (light status icons)
  - Import `flutter/services.dart`
  - Minor SliverDelegate call tidy-up

- CategoryItemScreen
  - Gradient AppBar via `flexibleSpace` (AppColor.splashColorLeft/Right)
  - Set title/back/cart icon colors to white

- CategoryView (FoodCategoryView)
  - Increase category list height 100 → 120
  - Reduce label font to `fontSizeExtraSmall`

- Item Details AppBar
  - Add gradient in `flexibleSpace`
  - Set title and icons to white

- main.dart
  - Disable DevicePreview (enabled: false)
  - Global System UI: light icons for status & navigation bars

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -201,7 +201,7 @@
   "trip_route": "طريق الرحلة",
   "call": "اتصل",
   "order_details": "تفاصيل الطلب",
-  "rate_and_review": "معدل ومراجعة",
+  "rate_and_review": "تقيم ومراجعة",
   "rate_the_item": "قيم العنصر",
   "rate_the_delivery_man": "قيم موظف",
   "share_your_opinion": "شارك برأيك",
@@ -266,7 +266,7 @@
   "give_a_rating": "إعطاء تقييم",
   "write_a_review": "اكتب مراجعة",
   "rate_his_service": "قيم خدمته",
-  "rate_review": "معدل ومراجعة",
+  "rate_review": "تقييم ومراجعة",
   "items": "عناصر",
   "you_can_not_reorder_a_campaign": "لا يمكنك إعادة ترتيب الحملة",
   "reorder": "إعادة الطلب",
@@ -1067,7 +1067,7 @@
   "limited_time_offer": "عرض لفترة محدودة",
   "mins": "دقيقة",
   "sec": "ثانية",
-  "most_popular_items": "العناصر الأكثر شعبية",
+  "most_popular_items": "العناصر الأكثر شهرة",
   "কাছা": "منك",
   "open_now": "مفتوح الآن",
   "item_that_you_love": "خصيصاً لك",
@@ -1248,8 +1248,8 @@
   "see_our_most_popular_store_and_item": "اطلع علي مكاتبنا والعناصر المميزه لدينا",
   "create_account_with_existing_info": "إنشاء حساب بالمعلومات الموجودة",
   "enter_confirm_password": "أدخل تأكيد كلمة المرور",
-  "you_want_to_disable_notification": "تريد تعطيل الإخطار",
-  "you_want_to_enable_notification": "تريد تمكين الإخطار",
+  "you_want_to_disable_notification": "تريد تعطيل الاشعار",
+  "you_want_to_enable_notification": "تريد تمكين الاشعار",
   "convertible_points": "النقاط القابلة للتحويل",
   "referral_code": "رمز الإحالة",
   "download_app_from_this_link": "تحميل التطبيق من هذا الرابط",
