feat: enhance support and profile UI with new assets, gradient background, and styling updates
- Added new image asset `support_imag.png` and updated `Images.supportImage` reference.
- Updated Arabic translations:
  - Changed "restaurant_is_closed" to "المكتب مغلق".
  - Changed "run_store_by_purchasing_subscription_packages" to use "المكتب" instead of "المطعم".
- Improved `ProfileScreen`:
  - Added gradient background using `AppColor.splashColorLeft` and `AppColor.splashColorRight`.
  - Added `AppColor.whiteColor` constant in theme colors for consistent white text/icon styling.
  - Updated icons, titles, and text colors to white for better contrast.
  - Changed profile image placeholder to `guestIconLight`.
- Modified `SupportScreen`:
  - Increased spacing and scaled up the support image using `Transform.scale`.
  - Adjusted logo size for better layout balance.
- Minor cleanup in `CustomImage` widget formatting for placeholder handling.

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -354,7 +354,7 @@
   "popular_Nurse_Office": "مطاعم شعبية",
   "popular_stores": "مكاتب التمريض المعروفه",
   "new_on": "جديد على",
-  "restaurant_is_closed": "المطعم مغلق",
+  "restaurant_is_closed": "المكتب مغلق",
   "store_is_closed": "المتجر مغلق",
   "id": "بطاقة تعريف",
   "no_review_found": "لم يتم العثور على أي مراجعة",
@@ -1216,7 +1216,7 @@
   "store_will_pay": "سوف يدفع المتجر",
   "commission_to": "عمولة ل",
   "from_each_order_You_will_get_access_of_all": "من كل أمر. ستتمكن من الوصول إلى جميع الميزات والخيارات في لوحة المتجر والتطبيق والتفاعل مع المستخدم.",
-  "run_store_by_purchasing_subscription_packages": "قم بتشغيل المطعم عن طريق شراء حزم الاشتراك. سيكون لديك إمكانية الوصول إلى الميزات الموجودة في لوحة المطعم والتطبيق والتفاعل مع المستخدم وفقًا لحزم الاشتراك.",
+  "run_store_by_purchasing_subscription_packages": "قم بتشغيل المكتب عن طريق شراء حزم الاشتراك. سيكون لديك إمكانية الوصول إلى الميزات الموجودة في لوحة المكتب والتطبيق والتفاعل مع المستخدم وفقًا لحزم الاشتراك.",
   "no_package_available": "لا توجد حزمة متاحة",
   "continue_with": "تواصل مع",
   "days_free_trial": "تجربة مجانية",
